subprojects/groovy-parser-antlr4/src/test/resources/fail/Modifier_05x.groovy
class A {
    protected public a
}